--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,8 +13,8 @@
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484121.md#1" title="程晓农：中共的现金外汇储备行将见底""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/03/gettyimages-1013061576-594x594-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484237.md#1" title="大陆3季度粮价上涨 玉米每吨价格创4年新高""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/06/1906082300411528-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://kdoobq3732.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/19/n12485360.md#1">保护伞餐厅遭泼秽物停业一周 台警方拘捕四人</a><br>
-:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a><br>
+:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/19/n12485360.md#1">保护伞餐厅遭泼秽物停业一周 台警方拘捕四人</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485182.md#1">拜登竞选阵营警告支持者：川普仍可胜选</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482137.md#1">【最新疫情10.19】美南部州经济复苏快</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12485050.md#1">中共为何强行火化他们的遗体（15）</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,790,850 人
+!共 365,791,883 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
