--- a/gb/20/2/8/n11853491.md
+++ b/gb/20/2/8/n11853491.md
@@ -1,53 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/kmtpx253/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kmtpx253/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kdoobq3732/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kdoobq3732/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kdoobq3732/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kdoobq3732/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kdoobq3732/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>防疫不眠不休 秀传医护员分批溪头森林浴</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/d0b2a2e1e2b01fc8a6cc5a998c9ee2a7-600x400.jpg" />
 <h6>彰化秀传医疗人员溪头森林浴。 (彰化秀传医院提供)
 </h6>
 <hr>
-<p>【大纪元2020年02月08日讯】（大纪元记者谢五男台湾彰化报导）<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E7%A7%80%E4%BC%A0.md">秀传</a>医疗体系为感谢第一线<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E9%98%B2%E7%96%AB.md">防疫</a>医护人员的辛劳，特别招待员工<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E6%A3%AE%E6%9E%97%E6%B5%B4.md">森林浴</a>一日游。彰化<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E7%A7%80%E4%BC%A0.md">秀传</a>与彰滨秀传一行总计40人，于8日元宵节当天前往<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E6%BA%AA%E5%A4%B4.md">溪头</a>等地，亲近大自然、享受<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E6%A3%AE%E6%9E%97%E6%B5%B4.md">森林浴</a>、品茗好茶，放松舒展身心，以蓄养日后医疗照护服务动力。</p>
-<p>因应“严重特殊传染性肺炎”疫情，<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E7%A7%80%E4%BC%A0%E5%8C%BB%E7%96%97%E4%BD%93%E7%B3%BB.md">秀传医疗体系</a>全力配合中央做好<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E9%98%B2%E7%96%AB.md">防疫</a>工作，秀传关心第一线防疫医护人员身心健康，8日活动由<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E7%A7%80%E4%BC%A0%E5%8C%BB%E7%96%97%E4%BD%93%E7%B3%BB.md">秀传医疗体系</a>人力资源课安排身心舒压的活动，包括<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E6%BA%AA%E5%A4%B4.md">溪头</a>园区内植物生态导览体验、走入森林步道漫步、参加户外团康游戏互动、品茗好茶等，也探访闻名全台最美的森林小学鹿谷乡内湖国小，行程多元又丰富。秀传医疗体系黄明和总裁及夫人更特别莅临溪头，为秀传第一线防疫医护人员加油打气。</p>
+<p>【大纪元2020年02月08日讯】（大纪元记者谢五男台湾彰化报导）<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E7%A7%80%E4%BC%A0.md#1">秀传</a>医疗体系为感谢第一线<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E9%98%B2%E7%96%AB.md#1">防疫</a>医护人员的辛劳，特别招待员工<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E6%A3%AE%E6%9E%97%E6%B5%B4.md#1">森林浴</a>一日游。彰化<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E7%A7%80%E4%BC%A0.md#1">秀传</a>与彰滨秀传一行总计40人，于8日元宵节当天前往<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E6%BA%AA%E5%A4%B4.md#1">溪头</a>等地，亲近大自然、享受<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E6%A3%AE%E6%9E%97%E6%B5%B4.md#1">森林浴</a>、品茗好茶，放松舒展身心，以蓄养日后医疗照护服务动力。</p>
+<p>因应“严重特殊传染性肺炎”疫情，<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E7%A7%80%E4%BC%A0%E5%8C%BB%E7%96%97%E4%BD%93%E7%B3%BB.md#1">秀传医疗体系</a>全力配合中央做好<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E9%98%B2%E7%96%AB.md#1">防疫</a>工作，秀传关心第一线防疫医护人员身心健康，8日活动由<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E7%A7%80%E4%BC%A0%E5%8C%BB%E7%96%97%E4%BD%93%E7%B3%BB.md#1">秀传医疗体系</a>人力资源课安排身心舒压的活动，包括<ahref="https://github.com/kdoobq3732/djy/blob/master/gb/tag/%E6%BA%AA%E5%A4%B4.md#1">溪头</a>园区内植物生态导览体验、走入森林步道漫步、参加户外团康游戏互动、品茗好茶等，也探访闻名全台最美的森林小学鹿谷乡内湖国小，行程多元又丰富。秀传医疗体系黄明和总裁及夫人更特别莅临溪头，为秀传第一线防疫医护人员加油打气。</p>
 <p>彰化秀传行政副院长许惠美表示，现为全台防疫之际，第一线防疫医护人员承受庞大身心压力，工作忙碌相对也减少参与休闲活动，适逢星期六是元宵节，秀传邀请医护人员到大自然走一走、呼吸新鲜空气，活动特别选在南投县鹿谷乡溪头等地，让人能置身在森林芬多精中漫步、休闲，对于身心舒压会有很大帮助。活动当天，参与人员也会落实健康自主管理，会于人多密闭空间戴上口罩，做好自身防疫工作，安心旅游。</p>
 <p>中央流行疫情指挥中心推动优质的防疫工作，守护台湾，目前国内疫情都在控制中。秀传医疗体系积极落实防疫工作片，守护民众健康，也用心关怀秀传医护人员身心健康。秀传医疗体系也预计至今年年底前，将为体系医护人员陆续举办至少10梯次以上的户外休闲活动，经费均由院方负担，慰劳员工工作辛劳，也要适时好好休息。</p>
 <p>责任编辑：李薇</p>
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/8/n11853491.htm">防疫不眠不休 秀传医护员分批溪头森林浴</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/7/n11774051.htm">健康管理无远弗届 彰县完成远距照护</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/12/31/n11757143.htm">科技男被老婆笑肉脚 原来是心肌梗塞逾90%</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/11/18/n11662934.htm">星级幸福企业 秀传招待护理人员搭邮轮游日本</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/6/10/n10471274.htm">十年有成 彰化秀传亚洲第一个微创手术训练中心</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/6/1/n10447421.htm">改善医疗设备落差 竹秀引进1.5T磁振造影仪</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/4/n8363656.htm">女性别蹲了  常蹲马桶膝盖更易坏</a></li>
-> <li><a href="https://www.epochtimes.com/gb/15/7/6/n4474405.htm">赚药品价差 秀传总裁黄明和缓起诉</a></li>
-> <li><a href="https://www.epochtimes.com/gb/15/1/7/n4335806.htm">台湾秀传医疗体系 拉斯维加斯展智慧医护</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎死亡惊人 武汉日烧百具死尸</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853323.htm">【独家】一天烧百具尸体 殡仪馆员怒斥狗官</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853273.htm">深圳突“封城”大批民众涌入香港</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853240.htm">钻石公主号增3例武汉肺炎 传美拟船上撤侨</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/29/n11828782.htm">250岁的隐士 娓娓道出前朝旧事</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/30/n11833429.htm">乌鸦满天飞 预兆什么灾？如何消解？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/1/n11836330.htm">孝女感动神仙  孝心精诚穿越时空得护祐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852868.htm">李文亮去世 中共舆情分析报告网络曝光</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851944.htm">陈秋实武汉失联 疑遭强制隔离 母亲求救</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850310.htm">【疫情最前线】武汉实验室抢专利不慎泄密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11847587.htm">【拍案惊奇】武汉瘟疫次生灾害 瑞德西韦贵吗</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11847578.htm">【十字路口】300记者进驻疫区 中共升级舆论战</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852119.htm">【老外看香港】武汉肺炎 香港危急</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852148.htm">悼预警武汉肺炎医生 章子怡怒斥警方“耻辱”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849645.htm">痛斥林郑限制佩戴口罩 关淑怡：施政似武则天</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849344.htm">吴宗宪捐300多台吸尘器 助武汉疫区医院</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852799.htm">小区现新冠病毒患者 陈浩明一家六口宅在家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11848061.htm">美国老牌影星寇克道格拉斯辞世 享嵩寿103岁</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/15/1/7/n4335806.md#1">台湾秀传医疗体系 拉斯维加斯展智慧医护</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/15/7/6/n4474405.md#1">赚药品价差 秀传总裁黄明和缓起诉</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/16/10/4/n8363656.md#1">女性别蹲了  常蹲马桶膝盖更易坏</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/6/1/n10447421.md#1">改善医疗设备落差 竹秀引进1.5T磁振造影仪</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/6/10/n10471274.md#1">十年有成 彰化秀传亚洲第一个微创手术训练中心</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/19/11/18/n11662934.md#1">星级幸福企业 秀传招待护理人员搭邮轮游日本</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/19/12/31/n11757143.md#1">科技男被老婆笑肉脚 原来是心肌梗塞逾90%</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/1/7/n11774051.md#1">健康管理无远弗届 彰县完成远距照护</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484234.md#1">化艰涩为趣味 骆奕帆改写偏乡教育</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12483988.md#1">旅客回家的路变宽敞 台铁永靖车站联外道路通车</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kmtpx253/djy/blob/master/gb/20/2/8/n11853491.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kmtpx253/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kmtpx253/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066835.md#1" target="_blank">袁斌：戈培尔妻子的理想歧途</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7931425.md#1" target="_blank">手术前一刻 老伴的膀胱癌消失了</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/3/n12378281.md#1">【西安事变?蒋宋夫妇】天降神谕 使命之行</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/9/26/n12433135.md#1">济公袈裟罩山 古井运木</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482835.md#1">【十字路口】拜登家再爆通共门 中共渗透联合国</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482472.md#1">【拍案惊奇】拜登家族通共？习为何突然回京</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481651.md#1">【新闻看点】习突返京或3原因 拜登家丑闻连爆</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482129.md#1">赵立坚诬蔑美军播毒论令川普愤怒至极</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482636.md#1">大陆二手房市场分化严重 房地产泡沫要破？</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481456.md#1">刘诗诗自曝不愿上综艺 个中原因令人吃惊</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481895.md#1">传周星驰重金续约林允 为对赌协议添保障</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/15/n12479366.md#1">章子怡当裁缝剪T恤 亲自秀模特各式穿搭</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICE定延心理不安 暂不参与正规二辑等活动</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480422.md#1">宝特瓶当水壶 10岁女童皮肤流汤、月经提早来</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481545.md#1">自制3杯天然运动饮料 提升免疫力、改善疲劳</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12480185.md#1">11天连飞1.2万公里 几百克重小鸟创世界纪录</a></li>
+<li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/20/10/16/n12481202.md#1">换季流鼻水、皮肤痒？过敏自救有一套</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kdoobq3732/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kdoobq3732/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/8/n11853491.htm">防疫不眠不休 秀传医护员分批溪头森林浴</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kdoobq3732/djy/blob/master/gb/20/2/8/n11853491.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kdoobq3732/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kdoobq3732/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kdoobq3732/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kdoobq3732/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kdoobq3732/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
