--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/10/n9943237.md#1" target="_blank">林辉：上了中共当的“一二九”学生运动</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/17/n11800547.md#1" target="_blank">新年集体炼功交流 法轮功修炼者遍及俄罗斯</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9970937.md#1" target="_blank">严家伟：访“共产主义接班人”的集体大坟场</a></li><li><a href="https://github.com/kdoobq3732/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/9/n10841367.md#1" target="_blank">一群百岁老人绝处逢生的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
